--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -12,8 +12,8 @@
     <div class="navbar">
         <img src="./assets/images/logo warteg bemo.png" alt="">
         <ul>
-            <li><a href="http://127.0.0.1:5500/index.html">Daftar Makanan</a></li>
-            <li><a href="http://127.0.0.1:5500/tentang-kami.html">Tentang Kami</a></li>
+            <li><a href="./index.html">Daftar Makanan</a></li>
+            <li><a href="./tentang-kami.html">Tentang Kami</a></li>
         </ul>
     </div>
     <div class="about">
