--- a/index.html
+++ b/index.html
@@ -12,62 +12,24 @@
     <div class="navbar">
         <img src="./assets/images/logo warteg bemo.png" alt="">
         <ul>
-            <li><a href="http://127.0.0.1:5500/index.html">Daftar Makanan</a></li>
-            <li><a href="http://127.0.0.1:5500/tentang-kami.html">Tentang Kami</a></li>
+            <li><a href="./index.html">Daftar Makanan</a></li>
+            <li><a href="./tentang-kami.html">Tentang Kami</a></li>
         </ul>
     </div>
     <div class="main">
-        <div class="content">
-            <div class="card">
-                <img src="./assets/images/rawon.jpg" alt="">
-                <p>Rawon</p>
-                <div class="action">
-                    <span>Rp. 20.000 | Stok: 5</span>
-                    <button><i class="fas fa-cart-plus"></i> Pesan</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./assets/images/sotobetawi.jpg" alt="">
-                <p>Soto Betawi</p>
-                <div class="action">
-                    <span>Rp. 60.000 | Stok: 9</span>
-                    <button><i class="fas fa-cart-plus"></i> Pesan</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./assets/images/kerupuk_putih.jpg" alt="">
-                <p>Krupuk</p>
-                <div class="action">
-                    <span>Rp. 25.000 | Stok: 2</span>
-                    <button><i class="fas fa-cart-plus"></i> Pesan</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./assets/images/telor_asin.jpg" alt="">
-                <p>Telur Asin</p>
-                <div class="action">
-                    <span>Rp. 70.000 | Stok: 2</span>
-                    <button><i class="fas fa-cart-plus"></i> Pesan</button>
-                </div>
-            </div>
-            <div class="card">
-                <img src="./assets/images/es_teh_manis.jpg" alt="">
-                <p>Es Teh Manis</p>
-                <div class="action">
-                    <span>Rp. 70.000 | Stok: 2</span>
-                    <button><i class="fas fa-cart-plus"></i> Pesan</button>
-                </div>
-            </div>
+        <div class="content" id='foodList'>
+            
         </div>
-        <div class="sidebar">
-            <div class="total">
+        <div class="sidebar" id="cartList">
+            <!-- <div class="total">
                 <h1>Total: Rp. 30.000</h1>
                 <hr>
             </div>
-            <div class="card-order">
+            <div class="card-order" >
                 <div class="detail">
                     <img src="./assets/images/sotobetawi.jpg" alt="">
                     <p>Soto Betawi</p>
+                    <span>3</span>
                 </div>
                 <button><i class="fas fa-trash"></i> Hapus</button>
             </div>
@@ -75,6 +37,8 @@
                 <div class="detail">
                     <img src="./assets/images/es_teh_manis.jpg" alt="">
                     <p>Es Teh Manis</p>
+                    <span>3</span>
+
                 </div>
                 <button><i class="fas fa-trash"></i> Hapus</button>
             </div>
@@ -82,13 +46,15 @@
                 <div class="detail">
                     <img src="./assets/images/telor_asin.jpg" alt="">
                     <p>Telur Asin</p>
+                    <span>3</span>
                 </div>
                 <button><i class="fas fa-trash"></i> Hapus</button>
             </div>
             <div class="card-finish">
                 <button>ORDER SEKARANG</button>
-            </div>
+            </div> -->
         </div>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
