--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b67e368fa6.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="./assets/images/logo warteg bemo.png" type="image/icon type">
     <link rel="stylesheet" href="./style.css">
-    <title>Warteg Bemo</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="navbar">
